--- a/Pipfile
+++ b/Pipfile
@@ -4,29 +4,55 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-asgiref = "*"
-autopep8 = "*"
-pycodestyle = "*"
-pytz = "*"
-sqlparse = "*"
-dj-database-url = "*"
-python-decouple = "*"
-gunicorn = "*"
-whitenoise = "*"
-django-import-export = "*"
-Unipath = "*"
-pillow = "*"
-django-environ = "~=0.4"
-boto3 = "*"
-collectfast = "*"
+asgiref = "==3.4.1"
+autopep8 = "==1.6.0"
+pycodestyle = "==2.8.0"
+pytz = "==2021.3"
+sqlparse = "==0.4.2"
+dj-database-url = "==0.5.0"
+python-decouple = "==3.5"
+gunicorn = "==20.1.0"
+whitenoise = "==5.3.0"
+django-import-export = "==2.7.0"
+Unipath = "==1.1"
+django-environ = "==0.8.1"
+boto3 = "==1.20.23"
 django-heroku = "*"
-djangorestframework = "*"
-s3transfer = "*"
+djangorestframework = "==3.13.0"
+s3transfer = "==0.5.0"
 boto = "*"
-django = "==3.0"
-psycopg2 = "==2.8.6"
-psycopg2-binary = "==2.8.6"
-django-storages = "==1.12.2"
+psycopg2 = "==2.9.2"
+psycopg2-binary = "==2.9.2"
+django-storages = "==1.12.3"
+"backports.zoneinfo" = "==0.2.1"
+botocore = "==1.23.24"
+defusedxml = "==0.7.1"
+diff-match-patch = "==20200713"
+django-appconf = "==1.0.5"
+django-autocomplete-light = "==3.8.2"
+django-crispy-forms = "==1.13.0"
+django-select2 = "==7.9.0"
+django-selectable = "==1.3.0"
+django-smart-selects = "==1.5.9"
+et-xmlfile = "==1.1.0"
+jmespath = "==0.10.0"
+numpy = "==1.21.4"
+odfpy = "==1.4.1"
+openpyxl = "==3.0.9"
+pandas = "==1.3.4"
+python-dateutil = "==2.8.2"
+six = "==1.16.0"
+tablib = "==3.1.0"
+toml = "==0.10.2"
+typing-extensions = "==4.0.1"
+urllib3 = "==1.26.7"
+xlrd = "==2.0.1"
+xlwt = "==1.3.0"
+Pillow = "==8.4.0"
+Collectfast = "==2.2.0"
+Django = "==4.0"
+MarkupPy = "==1.14"
+PyYAML = "==6.0"
 
 [dev-packages]
 
